# nekotracing

./: Cargo.toml  README.md  tracing.txt
.github/workflows/: count_tests.yml
src/: lib.rs
tests/: user.rs
tracing/: 2025-10-17T01-25-28.832894520-03-00@tests__user.rs-12-5.txt  2025-10-17T01-25-28.833229176-03-00@tests__user.rs-19-5.txt
