[package]
name = "nekotracing"
version = "0.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pas2rust/nekotracing"
readme = "README.md"
description = "."
keywords = ["log", "tracing", "metrics", "benchmark", "performance"]
authors = ["pas2rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/"
documentation = "https://docs.rs/nekotracing"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*"
]

[lib]
proc-macro = true

[dependencies]
syn =  { version = "2", features = ["full"]}
quote = '1'
proc-macro2 =  '1'
chrono = { version = "0"} 
colorful = { version = "0"}
tokio = { version = "1", features = ["fs", "io-util"]}

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
kenzu = "0.1"
regex = "1"